Fix Stoned logo alignment.

--- a/src/css/stonedaudio.styl
+++ b/src/css/stonedaudio.styl
@@ -626,10 +626,6 @@ section
       h1
         img
           height: 20px
-          // left: 10px
-          // margin-right: 10px
-          left: -10px
-          margin-left: 10px
 
 #getnews
   .content
